tests/snapshots/assets__check_file@typstfmt-136-raw.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/typstfmt/136-raw.typ
---
- ```
  my beautiful raw block !
  ```

- #{
    let raw_block = ```
    another beautiful block !
    ```
  }

A code block:
```rust
if b {
    let x = 2;
}
```

#text[
  J'ai fait un snippet neovim qui crée des banners ! ```
                      //////////////////////
                      // This is a banner //
                      //////////////////////
                      ```]
