tests/snapshots/assets__check_file@typstfmt-137-math-align-panic.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/typstfmt/137-math-align-panic.typ
---
$
  a
  &= b\
  &= c & d
$

$
  x &= a + b + c \
  &= a & (
    c = -b
  )
$
