tests/snapshots/assets__check_file@typstfmt-138-non-converge-block-comment.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/typstfmt/138-non-converge-block-comment.typ
snapshot_kind: text
---
#let test_func() = {
  (
    /*
    test
    */
  )
}
