tests/snapshots/assets__check_file@typstfmt-139-block-comment.typ-0.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/typstfmt/139-block-comment.typ
snapshot_kind: text
---
#let test_func() = {
  /*
  test
  */
}
