tests/snapshots/assets__check_file@typstfmt-139-block-comment.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/typstfmt/139-block-comment.typ
snapshot_kind: text
---
#let test_func() = {
  /*
  test
  */
}
